// Copyright 2020 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package unifiedfleet.api.v1.models.chromeos.lab;

option go_package = "infra/unifiedfleet/api/v1/models/chromeos/lab;ufspb";

import "infra/unifiedfleet/api/v1/models/chromeos/lab/rpm.proto";


// NEXT TAG: 6
message Chameleon {
  reserved 1;
  repeated ChameleonType chameleon_peripherals = 3;
  // Indicate if there's audio_board in the chameleon.
  bool audio_board = 2;

  string hostname = 4;

  // Remote Power Management for chameleon device.
  OSRPM rpm = 5;
}

// NEXT TAG: 11
enum ChameleonType {
  reserved 1, 6 to 8;
  CHAMELEON_TYPE_INVALID = 0;
  CHAMELEON_TYPE_DP = 2;
  CHAMELEON_TYPE_DP_HDMI = 3 [deprecated = true];
  CHAMELEON_TYPE_VGA = 4 [deprecated = true];
  CHAMELEON_TYPE_HDMI = 5;
  CHAMELEON_TYPE_V2 = 9;
  CHAMELEON_TYPE_V3 = 10;
}
